<resources>
    <string name="app_name">NearBuy_App</string>
    <string name="near_buy">nearbuy</string>

    <string name="sign_in">Sign in</string>
    <string name="Refer_A_friend">Refer a friend</string>
    <string name="Promocode">Promocodes</string>
    <string name="Notifications">Notifications</string>
    <string name="Help">Help</string>
    <string name="verson">9.5.2(198) rate</string>
    <string name="confg">Config 2.38</string>
    <string name="ShareAndRate">Share &amp; rate</string>
    <string name="the_life_Style_App">T H E   L I F E S T Y L E   A P P</string>

    <string name="c">c</string>
    <string name="Enter_Your_Mobile">Enter your mobile number</string>

    <string name="we_will_never_share">We will never share your  number with anyone ever!</string>
    <string name="ReferAFriend">Refer a friend</string>
    <string name="Login">Login</string>
    <string name="signintoview">Sign in to view your notifications</string>
    <string name="sharetheapp">Share the app</string>
    <string name="RateTheApp">Rate the app</string>
    <string name="LikeUsOnFacebook">Like us on facebook</string>
    <string name="NearBuyBlog">nearbuy blog</string>
    <string name="Stories">Stories</string>

    <string name="Q1">What is nearbuy.com?</string>
    <string name="text1">As the name suggests, we are all about the world around you. We want to be your companion on life’s daily adventures.  So, whether you want to dine at the finest restaurants, relax at the best spas and pamper yourself with great wellness and shopping offers or discover your city intimately, nearbuy.com makes it happen for you. And that’s not all. From tattoo parlors to music concerts, weekend getaways to international vacations, movie tickets to mobile phones, hotel deals to five star meals and more, everything you want is now within reach.</string>

    <string name="Q2">I have feedback or an idea to share, how do I share it?</string>
    <string name="text2">We LOVE feedback &amp; ideas. Please feel free to share all your thoughts on support@nearbuy.com.</string>

    <string name="Q3">What is new on nearbuy.com?</string>
    <string name="text3">At nearbuy.com, we’ve categorized and made available a huge supply of offers in a way that they can be easily discovered and redeemed.  You have search with multiple filters that can help you narrow down hassle free to what you are looking for. For more details, click here.  We also have a brand new app that helps you get personalized offers based on your location and preferences. You can download it on both Google Play Store and iOS App Store. Get it now.</string>

    <string name="Q4">How do I buy &amp; consume awesome offers on nearbuy.com?</string>
    <string name="text4">At nearbuy.com we are your companion on lives daily adventures- from your favourite cuisines, to the best gyms or a relaxing spa, get all that you love and more! Just register using your mobile number and email ID, you are ready to go.   What’s more?  If you download the latest version of the app, you will never need to take voucher print-outs! Just buy, show your voucher at the merchant outlets &amp; ‘Tap to redeem\' once you have consumed the service!</string>

    <string name="Q5">How do I contact Customer Support?</string>
    <string name="text5">You can email us on support@nearbuy.com or call us on +91–7303390416 (11:00 AM to 8:00 PM).</string>

    <string name="Q6">How do I register myself on nearbuy.com?</string>
    <string name="text6"><![CDATA[Our registration process is quick & simple. You just need to register on the nearbuy.com app/website using your Email ID & Mobile Number.]]></string>

    <string name="Q7">Why should I download the nearbuy.com mobile app?</string>
    <string name="text7">Our nearbuy.com mobile app is a light-weight(less than 6 MB) and easy to use app, that would give you the freedom to do what you love, anywhere you are.  You can download it on both Google Play Store and iOS App Store. Get it now.</string>



</resources>