<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:weightSum="10"
    android:orientation="vertical"
    android:layout_height="match_parent"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="1"
        >
        <TextView
            style="@style/textView"
            android:layout_width="wrap_content"
            android:padding="@dimen/dp_10"
            android:text="@string/ShareAndRate"
            android:layout_marginLeft="@dimen/dp_0"
            android:layout_gravity="center_horizontal|center_vertical">
        </TextView>
        <TextView
            android:id="@+id/tvShareAndRateBackToHome"
            style="@style/textView"
            android:padding="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:drawableLeft="@drawable/ic_arrow"
            android:layout_marginLeft="@dimen/dp_0"
            >
        </TextView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardShareTheApp"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="1"
        >
        <TextView
            style="@style/textView"
            android:text="@string/sharetheapp">

        </TextView>

    </androidx.cardview.widget.CardView>
    <LinearLayout
        style="@style/Linier_Layout2"
        android:layout_height="1dp"
        android:background="@color/black">

    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:id="@+id/cardRateTheApp"
        android:layout_weight="1">
        <TextView
            style="@style/textView"
            android:text="@string/RateTheApp">
        </TextView>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        style="@style/Linier_Layout2"
        android:layout_height="1dp"
        android:background="@color/black">
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardLikeUsOnFacebook"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="1">
        <TextView
            style="@style/textView"
            android:text="@string/LikeUsOnFacebook">
        </TextView>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        style="@style/Linier_Layout2"
        android:layout_height="1dp"
        android:background="#485460">
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardNearbuyBlog"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="1">
        <TextView
            style="@style/textView"
            android:text="@string/NearBuyBlog">
        </TextView>
    </androidx.cardview.widget.CardView>


</LinearLayout>